--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^7.4|^8.0",
+        "ext-json": "*",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -14,18 +15,27 @@
         "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "laravelcollective/html": "^6.2",
+        "phpoffice/phpspreadsheet": "^1.19",
         "spatie/laravel-activitylog": "^3.17",
-        "yajra/laravel-datatables": "^1.5"
+        "yajra/laravel-datatables": "^1.5",
+        "illuminate/queue": "^8.0",
+        "videlalvaro/php-amqplib": "^2.4",
+        "vladimir-yuldashev/laravel-queue-rabbitmq": "^11.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
         "facade/ignition": "^2.5",
+        "ext-curl": "*",
+        "nategood/httpful": "^0.2.20",
+        "squizlabs/php_codesniffer": "^3.6",
+        "friendsofphp/php-cs-fixer": "^2.17",
         "fakerphp/faker": "^1.9.1",
         "laravel/breeze": "^1.3",
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
+
     },
     "autoload": {
         "psr-4": {
@@ -40,7 +50,7 @@
         },
         "files": [
 
-            "app/Http/helpers.php"
+            "app/Http/Helpers.php"
         ]
     },
     "scripts": {
